Blender crash when baking rigid body world #69156

Closed
opened 2019-08-25 20:41:55 +02:00 by gabe2252 · 10 comments

System Information
Operating system: Linux-5.0.0-25-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Radeon RX 580 Series (POLARIS10, DRM 3.31.0, 5.0.0-25-generic, LLVM 7.1.0) X.Org 4.5 (Core Profile) Mesa 18.3.0-rc4

Blender Version
Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-20 22:35, hash: daba3e871f

Short description of error
I made a physics simulation and when I tried to bake it from the Rigid body world blender crashed instantly.

Exact steps for others to reproduce the error
1.Open blend file Marbles.blend
2. Press Bake in the Rigid Body World cache section.
3. Blender crashes

**System Information** Operating system: Linux-5.0.0-25-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Radeon RX 580 Series (POLARIS10, DRM 3.31.0, 5.0.0-25-generic, LLVM 7.1.0) X.Org 4.5 (Core Profile) Mesa 18.3.0-rc4 **Blender Version** Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-20 22:35, hash: `daba3e871f` **Short description of error** I made a physics simulation and when I tried to bake it from the Rigid body world blender crashed instantly. **Exact steps for others to reproduce the error** 1.Open blend file [Marbles.blend](https://archive.blender.org/developer/F7703437/Marbles.blend) 2. Press Bake in the Rigid Body World cache section. 3. Blender crashes
Author

Added subscriber: @gabe2252

Added subscriber: @gabe2252

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

Can confirm in Blender 2.81 af8e8be7b1,
Rigid Body World -> Bake && Animation Stop (space-bar) -> Crash BlenderNote: Blender 2.80 works fine

Can confirm in Blender `2.81` af8e8be7b1, **Rigid Body World -> Bake** && **Animation Stop (space-bar)** -> Crash Blender**Note:** Blender `2.80` works fine
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Probably caused by 03bf84db86.

Probably caused by 03bf84db86.
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Here is a bandaid [we cant rely on owner_id really being an Object, in case of RBW is a scene], but maybe @mont29 can have a look?
I'll set this on High (since it basically breaks RBW baking all together...)

P1082: #69156 bandaid



diff --git a/source/blender/makesrna/intern/rna_object_force.c b/source/blender/makesrna/intern/rna_object_force.c
index d082dfc694c..181317b6a2b 100644
--- a/source/blender/makesrna/intern/rna_object_force.c
+++ b/source/blender/makesrna/intern/rna_object_force.c
@@ -295,16 +295,20 @@ static void rna_PointCache_frame_step_range(
 int rna_Cache_info_length(PointerRNA *ptr)
 {
   PointCache *cache = (PointCache *)ptr->data;
-  Object *ob = (Object *)ptr->owner_id;
 
-  if (!ob) {
-    return 0;
-  }
+  /* could be a scene! */
+  if (GS(ptr->owner_id->name) == ID_OB) {
+    Object *ob = (Object *)ptr->owner_id;
 
-  PTCacheID pid = BKE_ptcache_id_find(ob, NULL, cache);
+    if (!ob) {
+      return 0;
+    }
 
-  if (cache->flag & PTCACHE_FLAG_INFO_DIRTY) {
-    BKE_ptcache_update_info(&pid);
+    PTCacheID pid = BKE_ptcache_id_find(ob, NULL, cache);
+
+    if (cache->flag & PTCACHE_FLAG_INFO_DIRTY) {
+      BKE_ptcache_update_info(&pid);
+    }
   }
 
   return (int)strlen(cache->info);
Here is a bandaid [we cant rely on `owner_id` really being an Object, in case of RBW is a scene], but maybe @mont29 can have a look? I'll set this on High (since it basically breaks RBW baking all together...) [P1082: #69156 bandaid](https://archive.blender.org/developer/P1082.txt) ``` diff --git a/source/blender/makesrna/intern/rna_object_force.c b/source/blender/makesrna/intern/rna_object_force.c index d082dfc694c..181317b6a2b 100644 --- a/source/blender/makesrna/intern/rna_object_force.c +++ b/source/blender/makesrna/intern/rna_object_force.c @@ -295,16 +295,20 @@ static void rna_PointCache_frame_step_range( int rna_Cache_info_length(PointerRNA *ptr) { PointCache *cache = (PointCache *)ptr->data; - Object *ob = (Object *)ptr->owner_id; - if (!ob) { - return 0; - } + /* could be a scene! */ + if (GS(ptr->owner_id->name) == ID_OB) { + Object *ob = (Object *)ptr->owner_id; - PTCacheID pid = BKE_ptcache_id_find(ob, NULL, cache); + if (!ob) { + return 0; + } - if (cache->flag & PTCACHE_FLAG_INFO_DIRTY) { - BKE_ptcache_update_info(&pid); + PTCacheID pid = BKE_ptcache_id_find(ob, NULL, cache); + + if (cache->flag & PTCACHE_FLAG_INFO_DIRTY) { + BKE_ptcache_update_info(&pid); + } } return (int)strlen(cache->info); ```

The actual issue here is that RNA code is 100% broken in case of RBW pointcache... Everything here assumes owner ID is an Object! So fix needs to be much more involved. On it.

The actual issue here is that RNA code is 100% broken in case of RBW pointcache... Everything here assumes owner ID is an Object! So fix needs to be much more involved. On it.
Bastien Montagne was assigned by Philipp Oeser 2019-08-26 15:40:22 +02:00

This issue was referenced by 39439a3afe

This issue was referenced by 39439a3afe18bb614e7ada1f61682b602a6c0549

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69156
No description provided.